--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ body{
     .navbar{
         min-height: 100vh;
         width: var(--SideBar-Width);
+        background:linear-gradient(rgb(89, 82, 64, 0.9), rgb(89, 82, 64, 0.9)) url(#);
     }
     
   }
